parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD
    DIV
    DO
    MOD
    MUL
    SUB

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> statement
Rule 4     statement -> PRINT LPAREN expression RPAREN SEMI
Rule 5     statement -> ID ASSIGN expression SEMI
Rule 6     statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 7     statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
Rule 8     statement -> WHILE WHILE_CONDITION expression LBRACE statements RBRACE
Rule 9     statement -> WHILE ID ASSIGN expression FROM expression TO expression LBRACE statements RBRACE
Rule 10    statement -> FUNCTION ID LPAREN params RPAREN LBRACE statements RBRACE
Rule 11    statement -> RETURN expression SEMI
Rule 12    statement -> INPUT OF ID VALUE INPUT_KEYWORD NEW SEMI
Rule 13    statement -> ARRAY DECLARE ID LBRACKET expression RBRACKET SEMI
Rule 14    statement -> BREAK SEMI
Rule 15    statement -> CONTINUE SEMI
Rule 16    params -> params COMMA ID
Rule 17    params -> ID
Rule 18    params -> empty
Rule 19    expression -> expression PLUS expression
Rule 20    expression -> expression MINUS expression
Rule 21    expression -> expression TIMES expression
Rule 22    expression -> expression DIVIDE expression
Rule 23    expression -> expression MODULO expression
Rule 24    expression -> expression GT expression
Rule 25    expression -> expression LT expression
Rule 26    expression -> expression GE expression
Rule 27    expression -> expression LE expression
Rule 28    expression -> expression EQ expression
Rule 29    expression -> expression NE expression
Rule 30    expression -> expression AND expression
Rule 31    expression -> expression OR expression
Rule 32    expression -> NOT expression
Rule 33    expression -> LPAREN expression RPAREN
Rule 34    expression -> NUMBER
Rule 35    expression -> STRING
Rule 36    expression -> ID
Rule 37    expression -> ID LPAREN args RPAREN
Rule 38    args -> args COMMA expression
Rule 39    args -> expression
Rule 40    args -> empty
Rule 41    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 
AND                  : 30
ARRAY                : 13
ASSIGN               : 5 9
BREAK                : 14
COMMA                : 16 38
CONTINUE             : 15
DECLARE              : 13
DIV                  : 
DIVIDE               : 22
DO                   : 
ELSE                 : 7
EQ                   : 28
FROM                 : 9
FUNCTION             : 10
GE                   : 26
GT                   : 24
ID                   : 5 9 10 12 13 16 17 36 37
IF                   : 6 7
INPUT                : 12
INPUT_KEYWORD        : 12
LBRACE               : 6 7 7 8 9 10
LBRACKET             : 13
LE                   : 27
LPAREN               : 4 6 7 10 33 37
LT                   : 25
MINUS                : 20
MOD                  : 
MODULO               : 23
MUL                  : 
NE                   : 29
NEW                  : 12
NOT                  : 32
NUMBER               : 34
OF                   : 12
OR                   : 31
PLUS                 : 19
PRINT                : 4
RBRACE               : 6 7 7 8 9 10
RBRACKET             : 13
RETURN               : 11
RPAREN               : 4 6 7 10 33 37
SEMI                 : 4 5 11 12 13 14 15
STRING               : 35
SUB                  : 
TIMES                : 21
TO                   : 9
VALUE                : 12
WHILE                : 8 9
WHILE_CONDITION      : 8
error                : 

Nonterminals, with rules where they appear

args                 : 37 38
empty                : 18 40
expression           : 4 5 6 7 8 9 9 9 11 13 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33 38 39
params               : 10 16
program              : 0
statement            : 2 3
statements           : 1 2 6 7 7 8 9 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (2) statements -> . statements statement
    (3) statements -> . statement
    (4) statement -> . PRINT LPAREN expression RPAREN SEMI
    (5) statement -> . ID ASSIGN expression SEMI
    (6) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (7) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (8) statement -> . WHILE WHILE_CONDITION expression LBRACE statements RBRACE
    (9) statement -> . WHILE ID ASSIGN expression FROM expression TO expression LBRACE statements RBRACE
    (10) statement -> . FUNCTION ID LPAREN params RPAREN LBRACE statements RBRACE
    (11) statement -> . RETURN expression SEMI
    (12) statement -> . INPUT OF ID VALUE INPUT_KEYWORD NEW SEMI
    (13) statement -> . ARRAY DECLARE ID LBRACKET expression RBRACKET SEMI
    (14) statement -> . BREAK SEMI
    (15) statement -> . CONTINUE SEMI

    PRINT           shift and go to state 4
    ID              shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FUNCTION        shift and go to state 8
    RETURN          shift and go to state 9
    INPUT           shift and go to state 10
    ARRAY           shift and go to state 11
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (2) statements -> statements . statement
    (4) statement -> . PRINT LPAREN expression RPAREN SEMI
    (5) statement -> . ID ASSIGN expression SEMI
    (6) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE
    (7) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (8) statement -> . WHILE WHILE_CONDITION expression LBRACE statements RBRACE
    (9) statement -> . WHILE ID ASSIGN expression FROM expression TO expression LBRACE statements RBRACE
    (10) statement -> . FUNCTION ID LPAREN params RPAREN LBRACE statements RBRACE
    (11) statement -> . RETURN expression SEMI
    (12) statement -> . INPUT OF ID VALUE INPUT_KEYWORD NEW SEMI
    (13) statement -> . ARRAY DECLARE ID LBRACKET expression RBRACKET SEMI
    (14) statement -> . BREAK SEMI
    (15) statement -> . CONTINUE SEMI

    $end            reduce using rule 1 (program -> statements .)
    PRINT           shift and go to state 4
    ID              shift and go to state 5
    IF              shift and go to state 6
    WHILE           shift and go to state 7
    FUNCTION        shift and go to state 8
    RETURN          shift and go to state 9
    INPUT           shift and go to state 10
    ARRAY           shift and go to state 11
    BREAK           shift and go to state 12
    CONTINUE        shift and go to state 13

    statement                      shift and go to state 14

state 3

    (3) statements -> statement .

    PRINT           reduce using rule 3 (statements -> statement .)
    ID              reduce using rule 3 (statements -> statement .)
    IF              reduce using rule 3 (statements -> statement .)
    WHILE           reduce using rule 3 (statements -> statement .)
    FUNCTION        reduce using rule 3 (statements -> statement .)
    RETURN          reduce using rule 3 (statements -> statement .)
    INPUT           reduce using rule 3 (statements -> statement .)
    ARRAY           reduce using rule 3 (statements -> statement .)
    BREAK           reduce using rule 3 (statements -> statement .)
    CONTINUE        reduce using rule 3 (statements -> statement .)
    $end            reduce using rule 3 (statements -> statement .)
    RBRACE          reduce using rule 3 (statements -> statement .)


state 4

    (4) statement -> PRINT . LPAREN expression RPAREN SEMI

    LPAREN          shift and go to state 15


state 5

    (5) statement -> ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 16


state 6

    (6) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE
    (7) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE

    LPAREN          shift and go to state 17


state 7

    (8) statement -> WHILE . WHILE_CONDITION expression LBRACE statements RBRACE
    (9) statement -> WHILE . ID ASSIGN expression FROM expression TO expression LBRACE statements RBRACE

    WHILE_CONDITION shift and go to state 18
    ID              shift and go to state 19


state 8

    (10) statement -> FUNCTION . ID LPAREN params RPAREN LBRACE statements RBRACE

    ID              shift and go to state 20


state 9

    (11) statement -> RETURN . expression SEMI
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression MODULO expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . NOT expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . ID LPAREN args RPAREN

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 21

state 10

    (12) statement -> INPUT . OF ID VALUE INPUT_KEYWORD NEW SEMI

    OF              shift and go to state 27


state 11

    (13) statement -> ARRAY . DECLARE ID LBRACKET expression RBRACKET SEMI

    DECLARE         shift and go to state 28


state 12

    (14) statement -> BREAK . SEMI

    SEMI            shift and go to state 29


state 13

    (15) statement -> CONTINUE . SEMI

    SEMI            shift and go to state 30


state 14

    (2) statements -> statements statement .

    PRINT           reduce using rule 2 (statements -> statements statement .)
    ID              reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    FUNCTION        reduce using rule 2 (statements -> statements statement .)
    RETURN          reduce using rule 2 (statements -> statements statement .)
    INPUT           reduce using rule 2 (statements -> statements statement .)
    ARRAY           reduce using rule 2 (statements -> statements statement .)
    BREAK           reduce using rule 2 (statements -> statements statement .)
    CONTINUE        reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    RBRACE          reduce using rule 2 (statements -> statements statement .)


state 15

    (4) statement -> PRINT LPAREN . expression RPAREN SEMI
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression MODULO expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . NOT expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . ID LPAREN args RPAREN

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 31

state 16

    (5) statement -> ID ASSIGN . expression SEMI
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression MODULO expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . NOT expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . ID LPAREN args RPAREN

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 32

state 17

    (6) statement -> IF LPAREN . expression RPAREN LBRACE statements RBRACE
    (7) statement -> IF LPAREN . expression RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression MODULO expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . NOT expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . ID LPAREN args RPAREN

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 33

state 18

    (8) statement -> WHILE WHILE_CONDITION . expression LBRACE statements RBRACE
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression MODULO expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . NOT expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . ID LPAREN args RPAREN

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 34

state 19

    (9) statement -> WHILE ID . ASSIGN expression FROM expression TO expression LBRACE statements RBRACE

    ASSIGN          shift and go to state 35


state 20

    (10) statement -> FUNCTION ID . LPAREN params RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 36


state 21

    (11) statement -> RETURN expression . SEMI
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . DIVIDE expression
    (23) expression -> expression . MODULO expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . NE expression
    (30) expression -> expression . AND expression
    (31) expression -> expression . OR expression

    SEMI            shift and go to state 37
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    TIMES           shift and go to state 40
    DIVIDE          shift and go to state 41
    MODULO          shift and go to state 42
    GT              shift and go to state 43
    LT              shift and go to state 44
    GE              shift and go to state 45
    LE              shift and go to state 46
    EQ              shift and go to state 47
    NE              shift and go to state 48
    AND             shift and go to state 49
    OR              shift and go to state 50


state 22

    (32) expression -> NOT . expression
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression MODULO expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . NOT expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . ID LPAREN args RPAREN

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 51

state 23

    (33) expression -> LPAREN . expression RPAREN
    (19) expression -> . expression PLUS expression
    (20) expression -> . expression MINUS expression
    (21) expression -> . expression TIMES expression
    (22) expression -> . expression DIVIDE expression
    (23) expression -> . expression MODULO expression
    (24) expression -> . expression GT expression
    (25) expression -> . expression LT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression LE expression
    (28) expression -> . expression EQ expression
    (29) expression -> . expression NE expression
    (30) expression -> . expression AND expression
    (31) expression -> . expression OR expression
    (32) expression -> . NOT expression
    (33) expression -> . LPAREN expression RPAREN
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . ID LPAREN args RPAREN

    NOT             shift and go to state 22
    LPAREN          shift and go to state 23
    NUMBER          shift and go to state 24
    STRING          shift and go to state 25
    ID              shift and go to state 26

    expression                     shift and go to state 52

state 24

    (34) expression -> NUMBER .

    SEMI            reduce using rule 34 (expression -> NUMBER .)
    PLUS            reduce using rule 34 (expression -> NUMBER .)
    MINUS           reduce using rule 34 (expression -> NUMBER .)
    TIMES           reduce using rule 34 (expression -> NUMBER .)
    DIVIDE          reduce using rule 34 (expression -> NUMBER .)
    MODULO          reduce using rule 34 (expression -> NUMBER .)
    GT              reduce using rule 34 (expression -> NUMBER .)
    LT              reduce using rule 34 (expression -> NUMBER .)
    GE              reduce using rule 34 (expression -> NUMBER .)
    LE              reduce using rule 34 (expression -> NUMBER .)
    EQ              reduce using rule 34 (expression -> NUMBER .)
    NE              reduce using rule 34 (expression -> NUMBER .)
    AND             reduce using rule 34 (expression -> NUMBER .)
    OR              reduce using rule 34 (expression -> NUMBER .)
    RPAREN          reduce using rule 34 (expression -> NUMBER .)
    LBRACE          reduce using rule 34 (expression -> NUMBER .)
    FROM            reduce using rule 34 (expression -> NUMBER .)
    COMMA           reduce using rule 34 (expression -> NUMBER .)
    RBRACKET        reduce using rule 34 (expression -> NUMBER .)
    TO              reduce using rule 34 (expression -> NUMBER .)


state 25

    (35) expression -> STRING .

    SEMI            reduce using rule 35 (expression -> STRING .)
    PLUS            reduce using rule 35 (expression -> STRING .)
    MINUS           reduce using rule 35 (expression -> STRING .)
    TIMES           reduce using rule 35 (expression -> STRING .)
    DIVIDE          reduce using rule 35 (expression -> STRING .)
    MODULO          reduce using rule 35 (expression -> STRING .)
    GT              reduce using rule 35 (expression -> STRING .)
    LT              reduce using rule 35 (expression -> STRING .)
    GE              reduce using rule 35 (expression -> STRING .)
    LE              reduce using rule 35 (expression -> STRING .)
    EQ              reduce using rule 35 (expression -> STRING .)
    NE              reduce using rule 35 (expression -> STRING .)
    AND             reduce using rule 35 (expression -> STRING .)
    OR              reduce using rule 35 (expression -> STRING .)
    RPAREN          reduce using rule 35 (expression -> STRING .)
    LBRACE          reduce using rule 35 (expression -> STRING .)
    FROM            reduce using rule 35 (expression -> STRING .)
    COMMA           reduce using rule 35 (expression -> STRING .)
    RBRACKET        reduce using rule 35 (expression -> STRING .)
    TO              reduce using rule 35 (expression -> STRING .)


state 26

    (36) expression -> ID .
    (37) expression -> ID . LPAREN args RPAREN

    SEMI            reduce using rule 36 (expression -> ID .)
    PLUS            reduce using rule 36 (expression -> ID .)
    MINUS           reduce using rule 36 (expression -> ID .)
    TIMES           reduce using rule 36 (expression -> ID .)
    DIVIDE          reduce using rule 36 (expression -> ID .)
    MODULO          reduce using rule 36 (expression -> ID .)
    GT              reduce using rule 36 (expression -> ID .)
    LT              reduce using rule 36 (expression -> ID .)
    GE              reduce using rule 36 (expression -> ID .)
    LE              reduce using rule 36 (expression -> ID .)
    EQ              reduce using rule 36 (expression -> ID .)
    NE              reduce using rule 36 (expression -> ID .)
    AND             reduce using rule 36 (expression -> ID .)
    OR              reduce using rule 36 (expression -> ID .)
    RPAREN          reduce using rule 36 (expression -> ID .)
    LBRACE          reduce using rule 36 (expression -> ID .)
    FROM            reduce using rule 36 (expression -> ID .)
    COMMA           reduce using rule 36 (expression -> ID .)
    RBRACKET        reduce using rule 36 (expression -> ID .)
    TO              reduce using rule 36 (expression -> ID .)
    LPAREN          shift and go to state 53


state 27

    (12) statement -> INPUT OF . ID VALUE INPUT_KEYWORD NEW SEMI

    ID              shift and go to state 54


state 28

    (13) statement -> ARRAY DECLARE . ID LBRACKET expression RBRACKET SEMI

    ID              shift and go to state 55


state 29

    (14) statement -> BREAK SEMI .

    PRINT           reduce using rule 14 (statement -> BREAK SEMI .)
    ID              reduce using rule 14 (statement -> BREAK SEMI .)
    IF              reduce using rule 14 (statement -> BREAK SEMI .)
    WHILE           reduce using rule 14 (statement -> BREAK SEMI .)
    FUNCTION        reduce using rule 14 (statement -> BREAK SEMI .)
    RETURN          reduce using rule 14 (statement -> BREAK SEMI .)
    INPUT           reduce using rule 14 (statement -> BREAK SEMI .)
    ARRAY           reduce using rule 14 (statement -> BREAK SEMI .)
    BREAK           reduce using rule 14 (statement -> BREAK SEMI .)
    CONTINUE        reduce using rule 14 (statement -> BREAK SEMI .)
    $end            reduce using rule 14 (statement -> BREAK SEMI .)
    RBRACE          reduce using rule 14 (statement -> BREAK SEMI .)


state 30

    (15) statement -> CONTINUE SEMI .

    PRINT           reduce using rule 15 (statement -> CONTINUE SEMI .)
    ID              reduce using rule 15 (statement -> CONTINUE SEMI .)
    IF              reduce using rule 15 (statement -> CONTINUE SEMI .)
    WHILE           reduce using rule 15 (statement -> CONTINUE SEMI .)
    FUNCTION        reduce using rule 15 (statement -> CONTINUE SEMI .)
    RETURN          reduce using rule 15 (statement -> CONTINUE SEMI .)
    INPUT           reduce using rule 15 (statement -> CONTINUE SEMI .)
    ARRAY           reduce using rule 15 (statement -> CONTINUE SEMI .)
    BREAK           reduce using rule 15 (statement -> CONTINUE SEMI .)
    CONTINUE        reduce using rule 15 (statement -> CONTINUE SEMI .)
    $end            reduce using rule 15 (statement -> CONTINUE SEMI .)
    RBRACE          reduce using rule 15 (statement -> CONTINUE SEMI .)


state 31

    (4) statement -> PRINT LPAREN expression . RPAREN SEMI
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . DIVIDE expression
    (23) expression -> expression . MODULO expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . NE expression
    (30) expression -> expression . AND expression
    (31) expression -> expression . OR expression

    RPAREN          shift and go to state 56
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    TIMES           shift and go to state 40
    DIVIDE          shift and go to state 41
    MODULO          shift and go to state 42
    GT              shift and go to state 43
    LT              shift and go to state 44
    GE              shift and go to state 45
    LE              shift and go to state 46
    EQ              shift and go to state 47
    NE              shift and go to state 48
    AND             shift and go to state 49
    OR              shift and go to state 50


state 32

    (5) statement -> ID ASSIGN expression . SEMI
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . DIVIDE expression
    (23) expression -> expression . MODULO expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . NE expression
    (30) expression -> expression . AND expression
    (31) expression -> expression . OR expression

    SEMI            shift and go to state 57
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    TIMES           shift and go to state 40
    DIVIDE          shift and go to state 41
    MODULO          shift and go to state 42
    GT              shift and go to state 43
    LT              shift and go to state 44
    GE              shift and go to state 45
    LE              shift and go to state 46
    EQ              shift and go to state 47
    NE              shift and go to state 48
    AND             shift and go to state 49
    OR              shift and go to state 50


state 33

    (6) statement -> IF LPAREN expression . RPAREN LBRACE statements RBRACE
    (7) statement -> IF LPAREN expression . RPAREN LBRACE statements RBRACE ELSE LBRACE statements RBRACE
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . DIVIDE expression
    (23) expression -> expression . MODULO expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . NE expression
    (30) expression -> expression . AND expression
    (31) expression -> expression . OR expression

    RPAREN          shift and go to state 58
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    TIMES           shift and go to state 40
    DIVIDE          shift and go to state 41
    MODULO          shift and go to state 42
    GT              shift and go to state 43
    LT              shift and go to state 44
    GE              shift and go to state 45
    LE              shift and go to state 46
    EQ              shift and go to state 47
    NE              shift and go to state 48
    AND             shift and go to state 49
    OR              shift and go to state 50


state 34

    (8) statement -> WHILE WHILE_CONDITION expression . LBRACE statements RBRACE
    (19) expression -> expression . PLUS expression
    (20) expression -> expression . MINUS expression
    (21) expression -> expression . TIMES expression
    (22) expression -> expression . DIVIDE expression
    (23) expression -> expression . MODULO expression
    (24) expression -> expression . GT expression
    (25) expression -> expression . LT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . LE expression
    (28) expression -> expression . EQ expression
    (29) expression -> expression . NE expression
    (30) expression -> expression . AND expression
    (31) expression -> expression . OR expression

    LBRACE          shift and go to state 59
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    TIMES           shift and go to state 40
    DIVIDE          shift and go to state 41
    MODULO          shift and go to state 42
    GT              shift and go to state 43
    LT              shift and go to state 44
    GE              shift and go to state 45
    LE              shift and go to state 46
    EQ              shift and go to state 47
    NE              shift and go to state 48
    AND             shift and go to state 49
    OR              shift and go to state 50


state 35
